Initial trial changes

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 						<select class="selectbox" id="pFormId" name="textType">
 							<option selected="selected" value="No">No</option>
 							<option value="Yes">Yes</option>
+							<option value="Curly_Tags">Curly Tags</option>
 						</select>
 					</td>
 				</tr>
